Fix community identifier wrapping

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -111,7 +111,6 @@ ul.navbar-user {
 .navbar-subnav .navbar-text {
   margin-top: 16px;
   margin-bottom:0;
-  width: 205px;
 }
 
 .navbar-subnav .nav.nav-tabs {
